k8s/static-files/deployment.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "static-files-server"
  namespace: "nirdrep-ns9648k"
  labels:
    app: "static-files-server"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "static-files-server"
  template:
    metadata:
      labels:
        app: "static-files-server"
    spec:
      containers:
        - name: "nginx"
          image: "nginx:alpine"
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: static-files
              mountPath: /usr/share/nginx/html
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: static-files
          hostPath:
            path: /mnt/nirdrep-ns9648k/lineage-renders
            type: Directory
        - name: nginx-config
          configMap:
            name: nginx-config
