k8s/static-files/service-external.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "static-files-service"
  namespace: "nirdrep-ns9648k"
  labels:
    app: "static-files-server"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    app: "static-files-server"
  type: "LoadBalancer"
