k8s/static-files/nirdrep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: static-files-server
  name: static-files-server-test
  namespace: nirdrep-ns9648k
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: static-files-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: static-files-server
    spec:
      containers:
      - image: nginx:alpine
        imagePullPolicy: IfNotPresent
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1024Mi
          requests:
            cpu: 250m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: static-files
          mountPropagation: HostToContainer
          subPath: lineage-renders
        - mountPath: /etc/nginx/conf.d
          name: nginx-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: static-files
        persistentVolumeClaim:
          claimName: 7816e67a-a3fc-4534-854c-fb259a6dc2d0
      - configMap:
          name: nginx-config
        name: nginx-config

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: static-files-server
  name: static-files-server-test
  namespace: nirdrep-ns9648k
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: static-files-server
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    app: static-files-server
  name: static-files-server-test
  namespace: nirdrep-ns9648k
spec:
  rules:
  - host: ns9648k.web.sigma2.no
    http:
      paths:
      - backend:
          service:
            name: static-files-server-test
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ns9648k.web.sigma2.no
    secretName: web-ns9648k-production-tls

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: static-files-server
  name: static-files-server-test
  namespace: nirdrep-ns9648k
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: kube-ingress
    ports:
    - port: 80
      protocol: TCP
  podSelector:
    matchLabels:
      app: static-files-server
  policyTypes:
  - Ingress
